// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PaginatedTable > render correctly in server mode 1`] = `
<div
  class="sy-paginated-table"
  id="paginated-table"
>
  <div
    class="
      v-data-table
      v-table
      v-table--density-default
      v-table--has-bottom
      v-table--has-top
      v-theme--light
    "
    itemslength="0"
  >
    <!---->
    <div class="v-table__wrapper">
      <table>
        <!---->
        <thead>
          <!---->
        </thead>
        <!---->
        <tbody>
          <!---->
          <tr class="v-data-table-rows-no-data">
            <td colspan="0">
              No data available
            </td>
          </tr>
          <!---->
        </tbody>
        <!---->
        <!---->
      </table>
    </div>
    <hr
      aria-orientation="horizontal"
      class="
        v-divider
        v-theme--light
      "
      role="separator"
    />
    <div class="v-data-table-footer">
      <!---->
      <div class="v-data-table-footer__items-per-page">
        <span>
          Items per page:
        </span>
        <div class="
          v-input
          v-input--center-affix
          v-input--density-compact
          v-input--dirty
          v-input--horizontal
          v-locale--is-ltr
          v-select
          v-select--selected
          v-select--single
          v-text-field
          v-theme--light
        ">
          <!---->
          <div class="v-input__control">
            <div
              class="
                v-field
                v-field--active
                v-field--appended
                v-field--center-affix
                v-field--dirty
                v-field--no-label
                v-field--variant-outlined
                v-locale--is-ltr
                v-theme--light
              "
              role="combobox"
            >
              <div class="v-field__overlay"></div>
              <div class="v-field__loader">
                <div
                  aria-hidden="true"
                  aria-valuemax="100"
                  aria-valuemin="0"
                  class="
                    v-locale--is-ltr
                    v-progress-linear
                    v-theme--light
                  "
                  role="progressbar"
                  style="
                    top: 0px;
                    height: 0px;
                    --v-progress-linear-height: 2px;
                  "
                >
                  <!---->
                  <div
                    class="v-progress-linear__background"
                    style="opacity: NaN;"
                  ></div>
                  <div
                    class="v-progress-linear__buffer"
                    style="
                      opacity: NaN;
                      width: 0%;
                    "
                  ></div>
                  <transition-stub
                    appear="false"
                    css="true"
                    name="fade-transition"
                    persisted="false"
                  >
                    <div class="v-progress-linear__indeterminate">
                      <div class="
                        long
                        v-progress-linear__indeterminate
                      "></div>
                      <div class="
                        short
                        v-progress-linear__indeterminate
                      "></div>
                    </div>
                  </transition-stub>
                  <!---->
                </div>
              </div>
              <!---->
              <div
                class="v-field__field"
                data-no-activator=""
              >
                <!---->
                <!---->
                <!---->
                <div
                  class="v-field__input"
                  data-no-activator=""
                >
                  <!---->
                  <!---->
                  <div class="v-select__selection">
                    <span class="v-select__selection-text">
                      10
                      <!---->
                    </span>
                  </div>
                  <input
                    aria-describedby="input-v-0-messages"
                    aria-label="Open"
                    id="input-v-0"
                    inputmode="none"
                    size="1"
                    title="Open"
                    type="text"
                    value="10"
                  />
                </div>
                <!---->
              </div>
              <!---->
              <div class="v-field__append-inner">
                <!---->
                <i
                  aria-hidden="true"
                  class="
                    mdi
                    mdi-menu-down
                    notranslate
                    v-icon
                    v-icon--size-default
                    v-select__menu-icon
                    v-theme--light
                  "
                ></i>
                <!---->
              </div>
              <div class="v-field__outline">
                <div class="v-field__outline__start"></div>
                <!---->
                <div class="v-field__outline__end"></div>
                <!---->
              </div>
            </div>
          </div>
          <!---->
          <!---->
        </div>
      </div>
      <div class="v-data-table-footer__info">
        <div>
          0-0 of 0
        </div>
      </div>
      <div class="v-data-table-footer__pagination">
        <nav
          aria-label="Pagination Navigation"
          class="
            v-pagination
            v-theme--light
          "
          role="navigation"
        >
          <ul class="v-pagination__list">
            <li class="v-pagination__first">
              <button
                aria-disabled="true"
                aria-label="First page"
                class="
                  v-btn
                  v-btn--density-comfortable
                  v-btn--disabled
                  v-btn--icon
                  v-btn--rounded
                  v-btn--size-default
                  v-btn--variant-plain
                  v-theme--light
                "
                disabled=""
                type="button"
              >
                <span class="v-btn__overlay"></span>
                <span class="v-btn__underlay"></span>
                <!---->
                <span
                  class="v-btn__content"
                  data-no-activator=""
                >
                  <i
                    aria-hidden="true"
                    class="
                      mdi
                      mdi-page-first
                      notranslate
                      v-icon
                      v-icon--size-default
                      v-theme--light
                    "
                  ></i>
                </span>
                <!---->
                <!---->
              </button>
            </li>
            <li class="v-pagination__prev">
              <button
                aria-disabled="true"
                aria-label="Previous page"
                class="
                  v-btn
                  v-btn--density-comfortable
                  v-btn--disabled
                  v-btn--icon
                  v-btn--rounded
                  v-btn--size-default
                  v-btn--variant-plain
                  v-theme--light
                "
                disabled=""
                type="button"
              >
                <span class="v-btn__overlay"></span>
                <span class="v-btn__underlay"></span>
                <!---->
                <span
                  class="v-btn__content"
                  data-no-activator=""
                >
                  <i
                    aria-hidden="true"
                    class="
                      mdi
                      mdi-chevron-left
                      notranslate
                      v-icon
                      v-icon--size-default
                      v-theme--light
                    "
                  ></i>
                </span>
                <!---->
                <!---->
              </button>
            </li>
            <li class="v-pagination__next">
              <button
                aria-disabled="true"
                aria-label="Next page"
                class="
                  v-btn
                  v-btn--density-comfortable
                  v-btn--disabled
                  v-btn--icon
                  v-btn--rounded
                  v-btn--size-default
                  v-btn--variant-plain
                  v-theme--light
                "
                disabled=""
                type="button"
              >
                <span class="v-btn__overlay"></span>
                <span class="v-btn__underlay"></span>
                <!---->
                <span
                  class="v-btn__content"
                  data-no-activator=""
                >
                  <i
                    aria-hidden="true"
                    class="
                      mdi
                      mdi-chevron-right
                      notranslate
                      v-icon
                      v-icon--size-default
                      v-theme--light
                    "
                  ></i>
                </span>
                <!---->
                <!---->
              </button>
            </li>
            <li class="v-pagination__last">
              <button
                aria-disabled="true"
                aria-label="Last page"
                class="
                  v-btn
                  v-btn--density-comfortable
                  v-btn--disabled
                  v-btn--icon
                  v-btn--rounded
                  v-btn--size-default
                  v-btn--variant-plain
                  v-theme--light
                "
                disabled=""
                type="button"
              >
                <span class="v-btn__overlay"></span>
                <span class="v-btn__underlay"></span>
                <!---->
                <span
                  class="v-btn__content"
                  data-no-activator=""
                >
                  <i
                    aria-hidden="true"
                    class="
                      mdi
                      mdi-page-last
                      notranslate
                      v-icon
                      v-icon--size-default
                      v-theme--light
                    "
                  ></i>
                </span>
                <!---->
                <!---->
              </button>
            </li>
          </ul>
        </nav>
      </div>
    </div>
  </div>
</div>
`;

exports[`PaginatedTable > renders correctly in local mode 1`] = `
<div
  class="sy-paginated-table"
  headers="[object Object],[object Object],[object Object]"
  id="paginated-table"
  items="[object Object],[object Object],[object Object]"
>
  <div
    class="
      v-data-table
      v-table
      v-table--density-default
      v-table--has-bottom
      v-table--has-top
      v-theme--light
    "
    itemslength="0"
  >
    <!---->
    <div class="v-table__wrapper">
      <table>
        <!---->
        <thead>
          <tr>
            <th
              class="
                v-data-table-column--align-start
                v-data-table__td
                v-data-table__th
                v-data-table__th--sortable
              "
              colspan="1"
              rowspan="1"
            >
              <div class="v-data-table-header__content">
                <span>
                  ID
                </span>
                <i
                  aria-hidden="true"
                  class="
                    mdi
                    mdi-arrow-up
                    notranslate
                    v-data-table-header__sort-icon
                    v-icon
                    v-icon--size-default
                    v-theme--light
                  "
                ></i>
                <!---->
              </div>
            </th>
            <th
              class="
                v-data-table-column--align-start
                v-data-table__td
                v-data-table__th
                v-data-table__th--sortable
              "
              colspan="1"
              rowspan="1"
            >
              <div class="v-data-table-header__content">
                <span>
                  Name
                </span>
                <i
                  aria-hidden="true"
                  class="
                    mdi
                    mdi-arrow-up
                    notranslate
                    v-data-table-header__sort-icon
                    v-icon
                    v-icon--size-default
                    v-theme--light
                  "
                ></i>
                <!---->
              </div>
            </th>
            <th
              class="
                v-data-table-column--align-start
                v-data-table__td
                v-data-table__th
                v-data-table__th--sortable
              "
              colspan="1"
              rowspan="1"
            >
              <div class="v-data-table-header__content">
                <span>
                  Age
                </span>
                <i
                  aria-hidden="true"
                  class="
                    mdi
                    mdi-arrow-up
                    notranslate
                    v-data-table-header__sort-icon
                    v-icon
                    v-icon--size-default
                    v-theme--light
                  "
                ></i>
                <!---->
              </div>
            </th>
          </tr>
          <!---->
        </thead>
        <!---->
        <tbody>
          <!---->
          <tr class="v-data-table__tr">
            <td class="
              v-data-table-column--align-start
              v-data-table__td
            ">
              1
            </td>
            <td class="
              v-data-table-column--align-start
              v-data-table__td
            ">
              John Doe
            </td>
            <td class="
              v-data-table-column--align-start
              v-data-table__td
            ">
              25
            </td>
          </tr>
          <!---->
          <tr class="v-data-table__tr">
            <td class="
              v-data-table-column--align-start
              v-data-table__td
            ">
              2
            </td>
            <td class="
              v-data-table-column--align-start
              v-data-table__td
            ">
              Jane Doe
            </td>
            <td class="
              v-data-table-column--align-start
              v-data-table__td
            ">
              30
            </td>
          </tr>
          <!---->
          <tr class="v-data-table__tr">
            <td class="
              v-data-table-column--align-start
              v-data-table__td
            ">
              3
            </td>
            <td class="
              v-data-table-column--align-start
              v-data-table__td
            ">
              John Smith
            </td>
            <td class="
              v-data-table-column--align-start
              v-data-table__td
            ">
              35
            </td>
          </tr>
          <!---->
          <!---->
        </tbody>
        <!---->
        <!---->
      </table>
    </div>
    <hr
      aria-orientation="horizontal"
      class="
        v-divider
        v-theme--light
      "
      role="separator"
    />
    <div class="v-data-table-footer">
      <!---->
      <div class="v-data-table-footer__items-per-page">
        <span>
          Items per page:
        </span>
        <div class="
          v-input
          v-input--center-affix
          v-input--density-compact
          v-input--dirty
          v-input--horizontal
          v-locale--is-ltr
          v-select
          v-select--selected
          v-select--single
          v-text-field
          v-theme--light
        ">
          <!---->
          <div class="v-input__control">
            <div
              class="
                v-field
                v-field--active
                v-field--appended
                v-field--center-affix
                v-field--dirty
                v-field--no-label
                v-field--variant-outlined
                v-locale--is-ltr
                v-theme--light
              "
              role="combobox"
            >
              <div class="v-field__overlay"></div>
              <div class="v-field__loader">
                <div
                  aria-hidden="true"
                  aria-valuemax="100"
                  aria-valuemin="0"
                  class="
                    v-locale--is-ltr
                    v-progress-linear
                    v-theme--light
                  "
                  role="progressbar"
                  style="
                    top: 0px;
                    height: 0px;
                    --v-progress-linear-height: 2px;
                  "
                >
                  <!---->
                  <div
                    class="v-progress-linear__background"
                    style="opacity: NaN;"
                  ></div>
                  <div
                    class="v-progress-linear__buffer"
                    style="
                      opacity: NaN;
                      width: 0%;
                    "
                  ></div>
                  <transition-stub
                    appear="false"
                    css="true"
                    name="fade-transition"
                    persisted="false"
                  >
                    <div class="v-progress-linear__indeterminate">
                      <div class="
                        long
                        v-progress-linear__indeterminate
                      "></div>
                      <div class="
                        short
                        v-progress-linear__indeterminate
                      "></div>
                    </div>
                  </transition-stub>
                  <!---->
                </div>
              </div>
              <!---->
              <div
                class="v-field__field"
                data-no-activator=""
              >
                <!---->
                <!---->
                <!---->
                <div
                  class="v-field__input"
                  data-no-activator=""
                >
                  <!---->
                  <!---->
                  <div class="v-select__selection">
                    <span class="v-select__selection-text">
                      10
                      <!---->
                    </span>
                  </div>
                  <input
                    aria-describedby="input-v-0-messages"
                    aria-label="Open"
                    id="input-v-0"
                    inputmode="none"
                    size="1"
                    title="Open"
                    type="text"
                    value="10"
                  />
                </div>
                <!---->
              </div>
              <!---->
              <div class="v-field__append-inner">
                <!---->
                <i
                  aria-hidden="true"
                  class="
                    mdi
                    mdi-menu-down
                    notranslate
                    v-icon
                    v-icon--size-default
                    v-select__menu-icon
                    v-theme--light
                  "
                ></i>
                <!---->
              </div>
              <div class="v-field__outline">
                <div class="v-field__outline__start"></div>
                <!---->
                <div class="v-field__outline__end"></div>
                <!---->
              </div>
            </div>
          </div>
          <!---->
          <!---->
        </div>
      </div>
      <div class="v-data-table-footer__info">
        <div>
          1-3 of 3
        </div>
      </div>
      <div class="v-data-table-footer__pagination">
        <nav
          aria-label="Pagination Navigation"
          class="
            v-pagination
            v-theme--light
          "
          role="navigation"
        >
          <ul class="v-pagination__list">
            <li class="v-pagination__first">
              <button
                aria-disabled="true"
                aria-label="First page"
                class="
                  v-btn
                  v-btn--density-comfortable
                  v-btn--disabled
                  v-btn--icon
                  v-btn--rounded
                  v-btn--size-default
                  v-btn--variant-plain
                  v-theme--light
                "
                disabled=""
                type="button"
              >
                <span class="v-btn__overlay"></span>
                <span class="v-btn__underlay"></span>
                <!---->
                <span
                  class="v-btn__content"
                  data-no-activator=""
                >
                  <i
                    aria-hidden="true"
                    class="
                      mdi
                      mdi-page-first
                      notranslate
                      v-icon
                      v-icon--size-default
                      v-theme--light
                    "
                  ></i>
                </span>
                <!---->
                <!---->
              </button>
            </li>
            <li class="v-pagination__prev">
              <button
                aria-disabled="true"
                aria-label="Previous page"
                class="
                  v-btn
                  v-btn--density-comfortable
                  v-btn--disabled
                  v-btn--icon
                  v-btn--rounded
                  v-btn--size-default
                  v-btn--variant-plain
                  v-theme--light
                "
                disabled=""
                type="button"
              >
                <span class="v-btn__overlay"></span>
                <span class="v-btn__underlay"></span>
                <!---->
                <span
                  class="v-btn__content"
                  data-no-activator=""
                >
                  <i
                    aria-hidden="true"
                    class="
                      mdi
                      mdi-chevron-left
                      notranslate
                      v-icon
                      v-icon--size-default
                      v-theme--light
                    "
                  ></i>
                </span>
                <!---->
                <!---->
              </button>
            </li>
            <li class="v-pagination__next">
              <button
                aria-disabled="true"
                aria-label="Next page"
                class="
                  v-btn
                  v-btn--density-comfortable
                  v-btn--disabled
                  v-btn--icon
                  v-btn--rounded
                  v-btn--size-default
                  v-btn--variant-plain
                  v-theme--light
                "
                disabled=""
                type="button"
              >
                <span class="v-btn__overlay"></span>
                <span class="v-btn__underlay"></span>
                <!---->
                <span
                  class="v-btn__content"
                  data-no-activator=""
                >
                  <i
                    aria-hidden="true"
                    class="
                      mdi
                      mdi-chevron-right
                      notranslate
                      v-icon
                      v-icon--size-default
                      v-theme--light
                    "
                  ></i>
                </span>
                <!---->
                <!---->
              </button>
            </li>
            <li class="v-pagination__last">
              <button
                aria-disabled="true"
                aria-label="Last page"
                class="
                  v-btn
                  v-btn--density-comfortable
                  v-btn--disabled
                  v-btn--icon
                  v-btn--rounded
                  v-btn--size-default
                  v-btn--variant-plain
                  v-theme--light
                "
                disabled=""
                type="button"
              >
                <span class="v-btn__overlay"></span>
                <span class="v-btn__underlay"></span>
                <!---->
                <span
                  class="v-btn__content"
                  data-no-activator=""
                >
                  <i
                    aria-hidden="true"
                    class="
                      mdi
                      mdi-page-last
                      notranslate
                      v-icon
                      v-icon--size-default
                      v-theme--light
                    "
                  ></i>
                </span>
                <!---->
                <!---->
              </button>
            </li>
          </ul>
        </nav>
      </div>
    </div>
  </div>
</div>
`;
